[FIX] Demo: Fix wrapper style
When we introduced the mobile mode, we started relying on the dynamic
vewport height (dvh) to account for the resizing of the viewport when
the virtual keyboard of a smarphone would pop up.

However, the rule we chose was to set the height of spreadsheet wrapper to
100dvh, which stands for 100% of the dynamic viewport height. As such,
if we were to add some header before the Spreadsheet component, the
latter would keep its size as 100% of the viewport, meaning that the
full component is pushed downwards and it overflows from the page.

This revision places the 100dvh rule over the full page to account for
any header that could be added in the future.

Task: 5212448
X-original-commit: f814b303a63cad3e87a1f174e5e5ff95a96f37bc

--- a/demo/main.css
+++ b/demo/main.css
@@ -6,6 +6,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu,
     "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     "Noto Color Emoji" !important;
+  height: 100dvh !important;
+  width: 100dvw !important;
 }
 
 .o-spreadsheet .o-test-notification {
